--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.6",
     "sass": "^1.58.3",
+    "typeface-cabin": "^1.1.13",
+    "typeface-open-sans": "^1.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
